# GitQlient

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AGitProcess.cpp  AGitProcess.h  AddSubmoduleDlg.ui  App.pri  BranchContextMenu.cpp  BranchContextMenu.h  BranchDlg.cpp  BranchDlg.h  BranchTreeWidget.cpp  BranchTreeWidget.h  BranchesViewDelegate.cpp  BranchesViewDelegate.h  BranchesWidget.cpp  BranchesWidget.h  CMakeLists.txt  CONTRIBUTING.md  ClickableFrame.cpp  ClickableFrame.h  CommitWidget.cpp  CommitWidget.h  CommitWidget.ui  Controls.cpp  Controls.h  DiffWidget.cpp  DiffWidget.h  DiffWidget.ui  FileContextMenu.cpp  FileContextMenu.h  FileDiffHighlighter.cpp  FileDiffHighlighter.h  FileDiffView.cpp  FileDiffView.h  FileDiffWidget.cpp  FileDiffWidget.h  FileListWidget.cpp  FileListWidget.h  (+68 more)
.github/: PULL_REQUEST_TEMPLATE.md
QLogger/: .gitignore  QLogger.cpp  QLogger.h  QLoggerLevel.h  QLoggerWriter.cpp  QLoggerWriter.h
QPinnableTabWidget/: QPinnableTabWidget.cpp
app/: AGitProcess.cpp  AGitProcess.h  AddSubmoduleDlg.cpp  AddSubmoduleDlg.h  BranchContextMenu.cpp  BranchContextMenu.h  BranchDlg.cpp  BranchDlg.h  BranchDlg.ui  BranchTreeWidget.cpp  BranchTreeWidget.h  BranchesViewDelegate.cpp  BranchesWidget.cpp  BranchesWidget.h  CMakeLists.txt  ClickableFrame.cpp  ClickableFrame.h  CloneDlg.cpp  CloneDlg.h  CloneDlg.ui  CommitHistoryColumns.h  CommitHistoryContextMenu.cpp  CommitHistoryContextMenu.h  CommitHistoryModel.cpp  CommitHistoryModel.h  CommitHistoryView.cpp  CommitHistoryView.h  CommitInfo.cpp  CommitInfo.h  CommitInfoWidget.cpp  CommitInfoWidget.h  CommitWidget.cpp  CommitWidget.h  CommitWidget.ui  ConfigWidget.cpp  ConfigWidget.h  Controls.cpp  Controls.h  CreateRepoDlg.cpp  CreateRepoDlg.h  (+77 more)
app/big_widgets/: BigWidgets.pri  CMakeLists.txt
app/big_widgets/include/: BlameWidget.h  ConfigWidget.h  Controls.h  GitQlient.h  GitQlientRepo.h  GitQlientSettings.h  HistoryWidget.h
app/big_widgets/src/: BlameWidget.cpp  ConfigWidget.cpp  ConfigWidget.ui  GitQlientRepo.cpp  GitQlientSettings.cpp  HistoryWidget.cpp  MergeWidget.cpp
app/config/: CMakeLists.txt
app/config/src/: GeneralConfigDlg.cpp  InitScreen.cpp
aux_widgets/: AuxiliarWidgets.pri  BranchDlg.cpp  BranchDlg.h  BranchDlg.ui  ClickableFrame.cpp  ClickableFrame.h  CreateRepoDlg.cpp  CreateRepoDlg.h  ProgressDlg.cpp
big_widgets/: BigWidgets.pri  BlameWidget.cpp  BlameWidget.h  CommitHistoryWidget.cpp  CommitHistoryWidget.h  Controls.cpp  Controls.h  DiffWidget.cpp  DiffWidget.h  FileBlameWidget.cpp  FileBlameWidget.h  FileHistoryWidget.cpp  FileHistoryWidget.h  GitQlient.cpp  GitQlient.h  GitQlientRepo.cpp  GitQlientRepo.h  GitQlientSettings.cpp  GitQlientSettings.h  GitQlientStyles.h  HistoryWidget.cpp  HistoryWidget.h  MergeWidget.cpp  MergeWidget.h
branches/: AddSubmoduleDlg.cpp  AddSubmoduleDlg.h  BranchContextMenu.cpp  BranchContextMenu.h  BranchDlg.cpp  BranchTreeWidget.cpp  BranchTreeWidget.h  Branches.pri  BranchesWidget.cpp  BranchesWidget.h  StashesContextMenu.cpp  StashesContextMenu.h  TagDlg.cpp  TagDlg.h
commits/: CommitInfoWidget.cpp  CommitInfoWidget.h  Commits.pri  FileContextMenu.cpp  FileListWidget.cpp  FileListWidget.h  FileWidget.cpp  FileWidget.h  UnstagedFilesContextMenu.cpp  UnstagedFilesContextMenu.h  UnstagedMenu.cpp  UnstagedMenu.h  WorkInProgressWidget.cpp  WorkInProgressWidget.h  WorkInProgressWidget.ui
config/: Config.pri  ConfigWidget.cpp  ConfigWidget.h  GitConfigDlg.h  (+2 more)
src/aux_widgets/: AuxiliarWidgets.pri  BranchDlg.cpp  BranchDlg.h  BranchDlg.ui  ButtonLink.cpp  ButtonLink.hpp  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ClickableFrame.cpp  ClickableFrame.h  Colors.h  CommitInfoPanel.cpp  CommitInfoPanel.h  ConflictButton.cpp  ConflictButton.h  CreateRepoDlg.cpp  CreateRepoDlg.h  CreateRepoDlg.ui  GitQlientUpdater.cpp  GitQlientUpdater.h  Highlighter.cpp  Highlighter.h  HunkWidget.cpp  HunkWidget.h  InitialRepoConfig.cpp  InitialRepoConfig.h  InitialRepoConfig.ui  InputShaDlg.cpp  InputShaDlg.h  NewVersionInfoDlg.cpp  NewVersionInfoDlg.h  NewVersionInfoDlg.ui  PluginsDownloader.cpp  PluginsDownloader.h  PomodoroButton.cpp  PomodoroButton.h  PomodoroConfigDlg.cpp  PomodoroConfigDlg.ui  ProgressDlg.h  (+11 more)
src/big_widgets/: BigWidgets.pri  BlameWidget.cpp  BlameWidget.h  CMakeLists.txt  ConfigWidget.cpp  ConfigWidget.h  ConfigWidget.ui  Controls.cpp  Controls.h  DiffWidget.cpp  DiffWidget.h  GitQlient.cpp  GitQlient.h  GitQlientRepo.cpp  GitQlientRepo.h  GitQlientSettings.cpp  GitQlientSettings.h  GitQlientStyles.cpp  GitQlientStyles.h  GitServerWidget.cpp  GitServerWidget.h  HistoryWidget.cpp  HistoryWidget.h  MergeWidget.cpp  MergeWidget.h
src/cache/: CMakeLists.txt  Cache.pri  CommitInfo.cpp  CommitInfo.h  GitCache.cpp  GitCache.h  GitRepoLoader.cpp  GitRepoLoader.h  GitServerCache.cpp  GitServerCache.h  GraphCache.cpp  GraphCache.h  Lane.cpp  Lane.h  Reference.cpp  Reference.h  References.cpp  References.h  RevisionFiles.cpp  RevisionFiles.h  RevisionsCache.cpp  RevisionsCache.h  WipHelper.h  lanes.cpp  lanes.h
src/cache/core/: Commit.h  CommitInfo.cpp  CommitInfo.h  References.h  ShaTracker.cpp  ShaTracker.h
src/cache/graph/: GraphCache.cpp  GraphMultiverse.cpp  LaneTypeManager.cpp  LaneTypeManager.h  State.cpp  State.h  StateType.h  TemporalLoom.cpp  Timeline.cpp  Timeline.h
src/config/: CMakeLists.txt  Config.pri  ConfigWidget.cpp  ConfigWidget.h  GeneralConfigDlg.cpp  GeneralConfigDlg.h  GeneralConfigPage.cpp  GeneralConfigPage.h  GitConfigDlg.cpp  GitConfigDlg.h  GitConfigDlg.ui  InitScreen.cpp  InitScreen.h
src/history/: CMakeLists.txt  CommitHistoryColumns.h  CommitHistoryContextMenu.cpp  CommitHistoryContextMenu.h  CommitHistoryModel.cpp  CommitHistoryModel.h  CommitHistoryView.cpp  CommitHistoryView.h  RepositoryViewDelegate.cpp  RepositoryViewDelegate.h  ShaFilterProxyModel.cpp  ShaFilterProxyModel.h
tests/: CMakeLists.txt
tests/Tests_Commits/: CMakeLists.txt  tests_commits.cpp
tests/Tests_Core/: CMakeLists.txt  TestsCore.cpp  TestsCore.h  main.cpp
tests/Tests_Graph/: CMakeLists.txt  TestsGraphCache.cpp  TestsGraphCache.h  main.cpp
(+454 files in other folders)
